リバーズプロキシの設定追加

--- a/docker/etc/nginx/conf.d/default.conf
+++ b/docker/etc/nginx/conf.d/default.conf
@@ -1,10 +1,105 @@
+    # ポートフォワードの設定
+    upstream proxy.com{
+        server 168.16.4.2;
+        server 192.168.5.2;
+        # server 192.168.6.2;
+        # server 192.168.7.2;
+
+        server web_python;
+        server web_python_flask;
+    }
+    upstream p.com{
+        server 168.16.4.2;
+    }
+    upstream m.com{
+        server 192.168.5.2;
+    }
+    upstream py.com{
+        # server 192.168.6.2;
+        server web_python;
+    }
+    upstream pyflask.com{
+        # server 192.168.7.2;
+        server web_python_flask;
+    }
+
 server {
     listen       80;
-    server_name  localhost;
+    server_name  lb;
 
     # レスポンスヘッダのContent-typeを指定
     charset UTF-8;
     add_header Cache-Control public;
+
+    proxy_set_header    Host    $host:$server_port;
+    proxy_set_header    X-Real-IP    $remote_addr;
+    proxy_set_header    X-Forwarded-Host      $host;
+    proxy_set_header    X-Forwarded-Server    $host;
+    proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
+
+    # location / {
+    #   proxy_pass http://proxy.com;
+    # }
+
+    location /p {
+      proxy_pass http://p.com;
+    }
+
+    location /m {
+      proxy_pass http://m.com;
+    }
+
+    # http://localhost:8080/pyhtml/index.html => http://py.com/index.html
+    location /pyhtml {
+      proxy_pass http://py.com/;
+    }
+
+    # 別サーバからのリダイレクト
+    location /pyflask/ {
+      proxy_pass http://pyflask.com/;
+
+      # allow 112.168.7.0
+      # deny all;
+
+      # proxy_set_header        Accept-Encoding  "" ;
+      # proxy_set_header        X-Real-IP $remote_addr;
+      # proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+      # proxy_set_header        X-Real-HOST  $host;
+      # proxy_cookie_domain     pyflask.com $host;
+      # proxy_cookie_path       / /pyflask;
+      # proxy_cookie_path / "/; secure; HttpOnly; SameSite=strict";
+      # proxy_set_header Host $host;
+    }
+
+    # 直接アクセス用（http://localhost:8888/pyflask_direct/hello）
+    location /pyflask_direct/ {
+      proxy_pass http://pyflask.com/;
+      proxy_set_header        Accept-Encoding  "" ;
+      proxy_set_header        X-Real-IP $remote_addr;
+      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header        X-Real-HOST  $host;
+      proxy_cookie_domain     pyflask.com $host;
+      proxy_cookie_path       / /pyflask_direct/hello;
+      # proxy_cookie_path       / /pyflask_direct/hello;
+      # set_cookie_flag HttpOnly secure;
+
+      # proxy_cookie_path       / "/pyflask/hello; secure; HttpOnly; SameSite=strict";
+      # proxy_set_header Host $host;
+    }
+
+    # .ht .svn .gitなどにアクセスさせたくないため
+    location ~ /\.(ht|svn|git) {
+        deny all;
+    }
+
+    error_page  404              /404.html;
+
+    # redirect server error pages to the static page /50x.html
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+
 
     # add conf
     #charset koi8-r;
@@ -17,41 +112,6 @@ server {
     #     root   /usr/share/nginx/html;
     #     index  index.html index.htm;
     # }
-
-    location / {
-      proxy_pass http://proxy.com;
-    }
-
-    location /p {
-      proxy_pass http://p.com;
-    }
-
-    location /m {
-      proxy_pass http://m.com;
-    }
-
-    # http://localhost:8080/py/index.html => http://py.com/index.html
-    location /pyhtml {
-      proxy_pass http://py.com/;
-    }
-
-    # location /pyflask {
-    #   proxy_pass http://pyflask.com/;
-    # }
-
-    # .ht .svn .gitなどにアクセスさせたくないため
-    location ~ /\.(ht|svn|git) {
-        deny all;
-    }
-
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
     #
