--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -19,7 +19,8 @@ services:
     networks:
       - network_LB_back_2
 
-  l_server3:
+  web_python:
+    container_name: web_python
     build:
       context: .
       dockerfile: DockerfilePython
@@ -31,29 +32,44 @@ services:
     networks:
       - network_LB_back_3
 
-  # l_server4:
-  #   build:
-  #     context: .
-  #     dockerfile: DockerfilePython2
-  #   ports:
-  #     - "8084:80"
-  #   hostname: web_python_flask
-  #   deploy:
-  #     replicas: 1
-  #   networks:
-  #     - network_LB_back_4
+  web_python_flask:
+    container_name: web_python_flask
+    build:
+      context: .
+      dockerfile: DockerfilePython2
+    ports:
+      - "8084:80"
+    hostname: web_python_flask
+    deploy:
+      replicas: 1
+    networks:
+      - network_LB_back_4
 
 
   lb:
+    container_name: lb
     build: .
     ports:
-      - "8080:80"
+      - "8888:80"
     networks:
       - default
       - network_LB_back_1
       - network_LB_back_2
       - network_LB_back_3
+      - network_LB_back_4
+      # - network_LB_back_5
+
+  lbout:
+    build:
+      context: .
+      dockerfile: DockerfileNginx
+    ports:
+      - "8080:80"
+      - "7070:443"
+    networks:
+      - default
       # - network_LB_back_4
+      # - network_LB_back_5
 
 networks:
   network_LB_front:
@@ -64,16 +80,7 @@ networks:
     external: true
   network_LB_back_3:
     external: true
-  # network_LB_back_4:
+  network_LB_back_4:
+    external: true
+  # network_LB_back_5:
   #   external: true
-
-  # web:
-  #   image: nginx
-  #   ports:
-  #   - "7000:80"
-  #   volumes:
-  #   - ./mysite.template:/etc/nginx/conf.d/mysite.template
-  #   environment:
-  #   - NGINX_HOST=foobar.com
-  #   - NGINX_PORT=80
-  #   command: /bin/bash -c "envsubst < /etc/nginx/conf.d/mysite.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
